--- a/app/src/main/res/layout/fragment_new_contact.xml
+++ b/app/src/main/res/layout/fragment_new_contact.xml
@@ -33,6 +33,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_full_name"
                     android:hint="Full Name"
+                    android:inputType="textCapWords"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -43,6 +44,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:hint="Email"
+                    android:inputType="textEmailAddress"
                     android:id="@+id/contacts_email"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
@@ -54,6 +56,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_mobile"
                     android:hint="Mobile"
+                    android:inputType="phone"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -65,6 +68,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_company"
                     android:hint="Comany"
+                    android:inputType="textCapWords"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -76,6 +80,7 @@
                     android:layout_width="match_parent"
                     android:hint="Email (Secondary)"
                     android:id="@+id/contacts_email_secondary"
+                    android:inputType="textEmailAddress"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -86,6 +91,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_mobile_secondary"
                     android:hint="Mobile (Secondary)"
+                    android:inputType="phone"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -96,6 +102,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_designation"
                     android:hint="Designation"
+                    android:inputType="text"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -106,6 +113,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_notes"
                     android:hint="Notes"
+                    android:inputType="text"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -113,7 +121,8 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_linkedin"
-                    android:hint="Designation"
+                    android:hint="Linkedin"
+                    android:inputType="text"
                     style="@style/edit_text_style"/>
             </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -122,6 +131,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/contacts_facebook"
                     android:hint="Facebook"
+                    android:inputType="text"
                     style="@style/edit_text_style"/>
         </android.support.design.widget.TextInputLayout>
         </LinearLayout>
