--- a/app/src/main/res/layout/browse_contacts_style.xml
+++ b/app/src/main/res/layout/browse_contacts_style.xml
@@ -35,42 +35,88 @@
                     android:id="@+id/contacts_name_browse"
                     style="@style/text_view_style"
                     android:text="Samuel D. Pollock"
-                    android:textColor="#000" />
+                    android:textColor="#000"
+                    android:textSize="15dp"/>
 
                 <TextView
                     android:id="@+id/contacts_designation_browse"
                     style="@style/text_view_style"
                     android:text="Information systems management"
-                    android:textColor="#000"
+                    android:textColor="#3c4650"
                     android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/contacts_company_browse"
                     style="@style/text_view_style"
                     android:text="First Choice Yard Help"
-                    android:textColor="#000"
+                    android:textColor="#3C4650"
                     android:textSize="12sp"/>
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/contacts_no_browse"
-            style="@style/text_view_style"
-            android:text="9781342197"
-            android:textColor="#000"
-            android:textSize="12sp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="5dp"/>
-
-        <TextView
-            style="@style/text_view_style"
-            android:id="@+id/contacts_email_browse"
-            android:text="SamuelDPollock@teleworm.us"
-            android:textColor="#5c6166"
-            android:layout_marginBottom="5dp"
+        <RelativeLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:textSize="12sp"/>
+            >
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_smartphone"
+                android:id="@+id/imageView" />
+
+            <TextView
+                android:id="@+id/contacts_no_browse"
+                style="@style/text_view_style"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/imageView"
+                android:text="9781342197"
+                android:textColor="#3c4650"
+               />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/edit_profile"
+                android:src="@drawable/ic_edit"
+                android:layout_gravity="left"
+                android:layout_alignParentRight="true"
+                android:paddingRight="20dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_email"
+                android:id="@+id/email_icon"/>
+
+            <TextView
+                style="@style/text_view_style"
+                android:id="@+id/contacts_email_browse"
+                android:text="SamuelDPollock@teleworm.us"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/email_icon"
+                android:textColor="#3c4650"
+                />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/view_details"
+                android:src="@drawable/ic_details"
+                android:layout_gravity="left"
+                android:layout_alignParentRight="true"
+                android:paddingRight="20dp"/>
+
+        </RelativeLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
