--- a/app/src/main/res/layout/fragment_new_contact.xml
+++ b/app/src/main/res/layout/fragment_new_contact.xml
@@ -8,6 +8,8 @@
         android:id="@+id/contacts_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="outsideOverlay"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -115,7 +117,9 @@
                     android:hint="Notes"
                     android:inputType="text"
                     style="@style/edit_text_style"/>
-            </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
@@ -124,7 +128,9 @@
                     android:hint="Linkedin"
                     android:inputType="text"
                     style="@style/edit_text_style"/>
-            </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
@@ -133,7 +139,48 @@
                     android:hint="Facebook"
                     android:inputType="text"
                     style="@style/edit_text_style"/>
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:text="Profile Photo"
+                style="@style/text_view_style"
+                android:layout_margin="5dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_margin="5dp"
+                >
+
+                <TextView
+                    android:text="Browse..."
+                    android:id="@+id/contact_profile_photo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/project_color"
+                    android:textAllCaps="false"
+                    android:textColor="@color/text_color"
+                    android:layout_margin="5dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dp_attached"
+                    android:background="@color/project_color"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/holo_green_dark"
+                    android:layout_margin="5dp"
+                    android:text="attached"
+                    android:visibility="gone"/>
+            </LinearLayout>
+
+            <Button
+                android:text="Save"
+                android:id="@+id/save_newContacts"
+                style="@style/button_style"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"/>
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
