--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="button_style">
+    <style name="home_button_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">20sp</item>
@@ -17,7 +17,17 @@
         <item name="android:layout_margin">3dp</item>
         <item name="android:textColor">@color/text_color</item>
         <item name="android:background">@drawable/thumb_button_shape</item>
+        <item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
+    </style>
 
+    <style name="button_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_margin">3dp</item>
+        <item name="android:textColor">@color/text_color</item>
+        <item name="android:background">@drawable/button_shape</item>
         <item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
     </style>
 
@@ -25,9 +35,8 @@
         <item name="android:textAlignment">center</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">12sp</item>
         <!--<item name="android:textStyle">bold</item>-->
-        <item name="android:layout_marginBottom">5dp</item>
         <item name="android:textColor">@color/text_color</item>
     </style>
 
@@ -39,7 +48,7 @@
         <item name="android:textColor">@color/text_color</item>
         <!--<item name="android:textStyle">bold</item>-->
         <item name="android:textSize">15sp</item>
-        <item name="android:paddingLeft">10dp</item>
+        <!--<item name="android:paddingLeft">10dp</item>-->
         <!--<item name="android:background">@drawable/edit_text_shape</item>-->
     </style>
 
