--- a/app/src/main/res/layout/activity_edit_contact.xml
+++ b/app/src/main/res/layout/activity_edit_contact.xml
@@ -1,9 +1,172 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:id="@+id/contacts_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cioc.crm.EditContactActivity">
+    android:scrollbars="vertical"
+    android:scrollbarStyle="outsideOverlay"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        >
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_full_name"
+                android:hint="Full Name"
+                android:inputType="textCapWords"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:id="@+id/contacts_email"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_mobile"
+                android:hint="Mobile"
+                android:inputType="phone"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <AutoCompleteTextView
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_company"
+                android:hint="Comany"
+                android:inputType="textCapWords"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:hint="Email (Secondary)"
+                android:id="@+id/contacts_email_secondary"
+                android:inputType="textEmailAddress"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_mobile_secondary"
+                android:hint="Mobile (Secondary)"
+                android:inputType="phone"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_designation"
+                android:hint="Designation"
+                android:inputType="text"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_notes"
+                android:hint="Notes"
+                android:inputType="text"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_linkedin"
+                android:hint="Linkedin"
+                android:inputType="text"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:id="@+id/contacts_facebook"
+                android:hint="Facebook"
+                android:inputType="text"
+                style="@style/edit_text_style"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:text="Profile Photo"
+            style="@style/text_view_style"
+            android:layout_margin="5dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_margin="5dp"
+            >
+
+            <TextView
+                android:text="Browse..."
+                android:id="@+id/contact_profile_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/project_color"
+                android:textAllCaps="false"
+                android:textColor="@color/text_color"
+                android:layout_margin="5dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/dp_attached"
+                android:background="@color/project_color"
+                android:textAllCaps="false"
+                android:textColor="@android:color/holo_green_dark"
+                android:layout_margin="5dp"
+                android:text="attached"
+                android:visibility="gone"/>
+        </LinearLayout>
+
+        <Button
+            android:text="Save"
+            android:id="@+id/save_newContacts"
+            style="@style/button_style"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
+
+    </LinearLayout>
+</ScrollView>
