--- a/app/src/main/res/layout/browse_contacts_style.xml
+++ b/app/src/main/res/layout/browse_contacts_style.xml
@@ -56,7 +56,7 @@
 
         <RelativeLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_margin="5dp"
             >
 
             <ImageView
@@ -88,7 +88,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_margin="5dp"
             >
 
             <ImageView
