--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -1,33 +1,31 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/project_color"
-    android:orientation="vertical">
+    >
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tl1"
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/browse_recyclerView">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/new_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:tabBackground="@color/text_color"
-        app:tabIndicatorColor="@color/project_color"
-        app:tabSelectedTextColor="@color/project_color"
-        app:tabTextColor="#b8bcc1">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="right|bottom"
+        android:layout_margin="10dp"
+        android:backgroundTint="#00f"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@color/project_color"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal" />
 
-        <android.support.design.widget.TabItem
-            style="@style/text_view_style"
-            android:text="New" />
-
-        <android.support.design.widget.TabItem
-            style="@style/text_view_style"
-            android:text="Browse" />
-
-    </android.support.design.widget.TabLayout>
-
-    <fragment
-        android:id="@+id/home_fg"
-        class="com.cioc.crm.NewContactFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+</RelativeLayout>
