--- a/app/src/main/res/layout/activity_new_contact.xml
+++ b/app/src/main/res/layout/activity_new_contact.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView android:id="@+id/contacts_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,7 +7,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,12 +15,61 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         >
 
+        <!-- TODO: Update blank fragment layout -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/create_a_new_contact"
+            style="@style/text_view_style"/>
+
+        <RelativeLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            >
+
+            <TextView
+                android:id="@+id/mrs."
+                style="@style/text_view_style"
+                android:text="Mrs."
+                android:textColor="#3c4650"
+                android:layout_centerVertical="true"/>
+
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/gender_sw"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/mrs."
+                android:checked="true"/>
+
+            <TextView
+                android:id="@+id/mr."
+                style="@style/text_view_style"
+                android:text="Mr."
+                android:textColor="#3c4650"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/gender_sw" />
+
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/switch_profile"
+                android:src="@drawable/male"
+                android:layout_gravity="left"
+                android:layout_alignParentRight="true"
+                />
+
+        </RelativeLayout>
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_full_name"
+                android:id="@+id/contacts_full_name"
                 android:hint="Full Name"
                 android:inputType="textCapWords"
                 style="@style/edit_text_style"/>
@@ -34,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:id="@+id/edit_email"
+                android:id="@+id/contacts_email"
                 style="@style/edit_text_style"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -43,7 +92,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_mobile"
+                android:id="@+id/contacts_mobile"
                 android:hint="Mobile"
                 android:inputType="phone"
                 style="@style/edit_text_style"/>
@@ -55,8 +104,8 @@
 
             <AutoCompleteTextView
                 android:layout_width="match_parent"
-                android:id="@+id/edit_company"
-                android:hint="Comany"
+                android:id="@+id/contacts_company"
+                android:hint="Company"
                 android:inputType="textCapWords"
                 style="@style/edit_text_style"/>
         </android.support.design.widget.TextInputLayout>
@@ -68,7 +117,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:hint="Email (Secondary)"
-                android:id="@+id/edit_email_secondary"
+                android:id="@+id/contacts_email_secondary"
                 android:inputType="textEmailAddress"
                 style="@style/edit_text_style"/>
         </android.support.design.widget.TextInputLayout>
@@ -78,7 +127,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_mobile_secondary"
+                android:id="@+id/contacts_mobile_secondary"
                 android:hint="Mobile (Secondary)"
                 android:inputType="phone"
                 style="@style/edit_text_style"/>
@@ -89,7 +138,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_designation"
+                android:id="@+id/contacts_designation"
                 android:hint="Designation"
                 android:inputType="text"
                 style="@style/edit_text_style"/>
@@ -100,7 +149,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_notes"
+                android:id="@+id/contacts_notes"
                 android:hint="Notes"
                 android:inputType="text"
                 style="@style/edit_text_style"/>
@@ -111,7 +160,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_linkedin"
+                android:id="@+id/contacts_linkedin"
                 android:hint="Linkedin"
                 android:inputType="text"
                 style="@style/edit_text_style"/>
@@ -122,7 +171,7 @@
             android:layout_height="wrap_content">
             <EditText
                 android:layout_width="match_parent"
-                android:id="@+id/edit_facebook"
+                android:id="@+id/contacts_facebook"
                 android:hint="Facebook"
                 android:inputType="text"
                 style="@style/edit_text_style"/>
@@ -142,7 +191,7 @@
 
             <TextView
                 android:text="Browse..."
-                android:id="@+id/edit_profile_photo"
+                android:id="@+id/contact_profile_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/project_color"
@@ -152,18 +201,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/edit_dp_attached"
+                android:id="@+id/dp_attached"
                 android:background="@color/project_color"
                 android:textAllCaps="false"
                 android:textColor="@android:color/holo_green_dark"
                 android:layout_margin="5dp"
                 android:text="attached"
+                android:textStyle="italic"
                 android:visibility="gone"/>
         </LinearLayout>
 
         <Button
             android:text="Save"
-            android:id="@+id/edit_save_newContacts"
+            android:id="@+id/save_newContacts"
             style="@style/button_style"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"/>
