--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,10 +25,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:layout_margin">3dp</item>
-        <item name="android:textColor">@color/text_color</item>
-        <item name="android:background">@drawable/button_shape</item>
+        <!--<item name="android:layout_margin">3dp</item>-->
+        <item name="android:textColor">@color/project_color</item>
+        <!--<item name="android:background">@drawable/button_shape</item>-->
         <item name="android:buttonStyle">?android:attr/borderlessButtonStyle</item>
+        <item name="android:background">@color/text_color</item>
     </style>
 
     <style name="text_view_style">
@@ -45,6 +46,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ems">10</item>
+        <item name="android:lines">1</item>
         <item name="android:textColor">@color/text_color</item>
         <!--<item name="android:textStyle">bold</item>-->
         <item name="android:textSize">15sp</item>
