--- a/app/src/main/res/layout/activity_relationships.xml
+++ b/app/src/main/res/layout/activity_relationships.xml
@@ -1,9 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cioc.crm.RelationshipsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/project_color"
+    >
 
-</android.support.constraint.ConstraintLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/realtionship_recyclerView">
+
+    </android.support.v7.widget.RecyclerView>
+</RelativeLayout>
