--- a/app/src/main/res/layout/browse_contacts_style.xml
+++ b/app/src/main/res/layout/browse_contacts_style.xml
@@ -54,7 +54,8 @@
             </LinearLayout>
         </LinearLayout>
 
-        <RelativeLayout android:layout_width="match_parent"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             >
