--- a/app/src/main/res/layout/activity_new_contact.xml
+++ b/app/src/main/res/layout/activity_new_contact.xml
@@ -10,9 +10,9 @@
         android:layout_weight="1"
         android:scrollbars="vertical"
         android:scrollbarStyle="outsideOverlay"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         xmlns:android="http://schemas.android.com/apk/res/android">
+        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
 
         <LinearLayout
             android:layout_width="match_parent"
