--- a/app/src/main/res/layout/browse_contacts_style.xml
+++ b/app/src/main/res/layout/browse_contacts_style.xml
@@ -2,11 +2,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/browse_cardView"
-    android:layout_margin="5dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
     app:cardBackgroundColor="@color/project_color"
-    app:cardElevation="5dp"
+    app:cardElevation="2dp"
+    app:cardCornerRadius="1dp"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="2dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout android:layout_width="match_parent"
