--- a/app/src/main/res/layout/fragment_active.xml
+++ b/app/src/main/res/layout/fragment_active.xml
@@ -5,11 +5,21 @@
     android:background="@color/project_color"
     tools:context="com.cioc.crm.ActiveFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:text="Active" />
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <!-- TODO: Update blank fragment layout -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Active" />
+
+    </LinearLayout>
+
+
 
 </FrameLayout>
