--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -5,10 +5,17 @@
     android:background="@color/project_color"
     tools:context="com.cioc.crm.TimelineFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TimeLine" />
+        android:orientation="vertical"
+        android:gravity="center">
 
+        <!-- TODO: Update blank fragment layout -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TimeLine" />
+
+    </LinearLayout>
 </FrameLayout>
