dialog and contacts list added

--- a/app/src/main/res/layout/activity_view_details.xml
+++ b/app/src/main/res/layout/activity_view_details.xml
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ti_active"
-                android:text="Active"/>
+                android:text="Info"/>
 
         </android.support.design.widget.TabLayout>
 
