--- a/app/src/main/res/layout/layout_fab_viewdetails.xml
+++ b/app/src/main/res/layout/layout_fab_viewdetails.xml
@@ -13,6 +13,47 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/layoutFabNotes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="212dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/cardview_light_background"
+            app:cardCornerRadius="@dimen/cardCornerRadius"
+            app:cardElevation="@dimen/cardElevation"
+            app:cardUseCompatPadding="true" >
+            <TextView
+                android:id="@+id/tvNotes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/notes_view"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textStyle="bold"
+                android:paddingRight="@dimen/cardview_horizontal_padding"
+                android:paddingLeft="@dimen/cardview_horizontal_padding"
+                android:paddingBottom="@dimen/cardview_vertical_padding"
+                android:paddingTop="@dimen/cardview_vertical_padding" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_notes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_note"
+            app:backgroundTint="#00f"
+            app:fabSize="mini" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/layoutFabSchedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -97,7 +138,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/layoutFabInfo"
+        android:id="@+id/layoutFabMeeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -116,11 +157,11 @@
             app:cardUseCompatPadding="true" >
 
             <TextView
-                android:id="@+id/cvtInfo"
+                android:id="@+id/cvtMeeting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/info_view"
+                android:text="@string/meeting_view"
                 android:textStyle="bold"
                 android:paddingRight="@dimen/cardview_horizontal_padding"
                 android:paddingLeft="@dimen/cardview_horizontal_padding"
@@ -130,10 +171,10 @@
         </android.support.v7.widget.CardView>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_info"
+            android:id="@+id/fab_meeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_info"
+            android:src="@drawable/ic_meeting"
             app:backgroundTint="#00f"
             app:fabSize="mini" />
 
