--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -13,163 +13,91 @@
         android:paddingLeft="@dimen/cardCornerRadius"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginBottom="3dp"
-        android:layout_marginLeft="2dp">
-
-        <!-- TODO: Update blank fragment layout -->
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/male"
-            android:id="@+id/info_image"/>
-
-        <TextView
-            style="@style/text_view_style"
-            android:text="Primary"
-            android:layout_gravity="left"
-            android:textSize="15dp"
-            android:textColor="#666161" />
-
-        <RelativeLayout android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_smartphone"
-                android:id="@+id/imageView" />
-
-            <TextView
-                android:id="@+id/info_mobno"
-                style="@style/text_view_style"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="3dp"
-                android:layout_toEndOf="@+id/imageView"
-                android:text="9781342197"
-                android:textColor="#3c4650"
-                />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            >
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_email"
-                android:id="@+id/email_icon"/>
-
-            <TextView
-                style="@style/text_view_style"
-                android:id="@+id/info_email"
-                android:text="SamuelDPollock@teleworm.us"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="3dp"
-                android:layout_toEndOf="@+id/email_icon"
-                android:textColor="#3c4650"
-                />
-
-        </RelativeLayout>
-
-        <TextView
-            style="@style/text_view_style"
-            android:text="Organisation"
-            android:layout_gravity="left"
-            android:textSize="15dp"
-            android:textColor="#666161"
-            android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/ic_organisation"
-            android:drawablePadding="3dp"/>
-
-        <TextView
-            style="@style/text_view_style"
-            android:id="@+id/info_company"
-            android:text="First Choice Yard Help"
-            android:layout_gravity="left"
-            android:textSize="15dp"
-            android:textColor="#000000"
-            android:layout_margin="10dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:gravity="center"
             android:layout_marginBottom="3dp"
-            >
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="left"
-                android:src="@drawable/ic_location"
-                android:id="@+id/info_iv_address"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="left"
-
-                >
-                <TextView
-                    style="@style/text_view_style"
-                    android:id="@+id/info_tv_address"
-                    android:text="2426 Pritchard Court
-Windson
-MN
-56101
-US"
-                    android:layout_gravity="left"
-                    android:textSize="15dp"
-                    android:textColor="#000000"
-                    />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <TextView
-            style="@style/text_view_style"
-            android:text="In Network"
-            android:layout_gravity="left"
-            android:textSize="15dp"
-            android:textColor="#666161"
-            android:layout_marginTop="20dp"
-           />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            >
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/male"
-                android:id="@+id/info_frnd_img"/>
+            android:layout_marginLeft="2dp">
 
             <TextView
                 style="@style/text_view_style"
-                android:id="@+id/info_frnd_name"
-                android:text="Robert Y. Griffin"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="3dp"
-                android:layout_toEndOf="@+id/info_frnd_img"
-                android:textColor="#3c4650"
-                />
+                android:id="@+id/info_company"
+                android:text="First Choice Yard Help"
+                android:layout_gravity="left"
+                android:textSize="15dp"
+                android:textColor="@color/black"
+                android:layout_marginLeft="35dp"/>
 
-        </RelativeLayout>
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginBottom="3dp"
+                >
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="left"
+                    android:src="@drawable/ic_location"
+                    android:id="@+id/info_iv_address"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="left"
+
+                    >
+                    <TextView
+                        style="@style/text_view_style"
+                        android:id="@+id/info_tv_address"
+                        android:text="2426 Pritchard Court"
+                        android:layout_gravity="left"
+                        android:textSize="12dp"
+                        android:textAlignment="gravity"
+                        android:textColor="@color/black"
+                        android:layout_margin="2dp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                style="@style/text_view_style"
+                android:text="In Network"
+                android:layout_gravity="left"
+                android:textSize="12dp"
+                android:textColor="@color/gray"
+                android:layout_marginTop="20dp"
+               />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                >
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/male"
+                    android:id="@+id/info_frnd_img"/>
+
+                <TextView
+                    style="@style/text_view_style"
+                    android:id="@+id/info_frnd_name"
+                    android:text="Robert Y. Griffin"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="3dp"
+                    android:layout_toEndOf="@+id/info_frnd_img"
+                    android:textColor="#3c4650"
+                    />
+
+            </RelativeLayout>
+        </LinearLayout>
 
     </ScrollView>
 
