--- a/app/src/main/res/layout/layout_timeline_adapter.xml
+++ b/app/src/main/res/layout/layout_timeline_adapter.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/feed_bg"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -27,8 +27,7 @@
                 android:id="@+id/profilePic"
                 android:layout_width="@dimen/feed_item_profile_pic"
                 android:layout_height="@dimen/feed_item_profile_pic"
-                android:scaleType="fitCenter"
-                android:src="@drawable/male">
+                android:scaleType="fitCenter" >
             </com.android.volley.toolbox.NetworkImageView>
 
             <LinearLayout
@@ -42,16 +41,14 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/feed_item_profile_name"
-                    android:textStyle="bold"
-                    android:text="National Deographic Channel"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/timestamp"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/timestamp"
-                    android:textSize="@dimen/feed_item_timestamp"
-                    android:text="22 Jun 2027"/>
+                    android:textSize="@dimen/feed_item_timestamp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -62,8 +59,7 @@
             android:paddingBottom="5dp"
             android:paddingLeft="@dimen/feed_item_status_pad_left_right"
             android:paddingRight="@dimen/feed_item_status_pad_left_right"
-            android:paddingTop="@dimen/feed_item_status_pad_top"
-            android:text="Science is a beautiful and emotional human endeavor says Brannon Braga, executive producer and director. And Cosmos is all about making science an experience."/>
+            android:paddingTop="@dimen/feed_item_status_pad_top" />
 
         <TextView
             android:id="@+id/txtUrl"
@@ -73,8 +69,7 @@
             android:paddingBottom="10dp"
             android:paddingLeft="@dimen/feed_item_status_pad_left_right"
             android:paddingRight="@dimen/feed_item_status_pad_left_right"
-            android:textColorLink="@color/link"
-            android:text="http://ti.me/1qW8MLB"/>
+            android:textColorLink="@color/link" />
 
         <com.cioc.crm.FeedImageView
             android:id="@+id/feedImage1"
@@ -82,8 +77,8 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:scaleType="fitXY"
-            android:visibility="visible"
-            android:src="@drawable/contacts_logo"/>
+            android:visibility="visible" />
+
     </LinearLayout>
 
 </LinearLayout>
