--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <color name="project_color">#ffffff</color>
     <color name="text_color">#39495e</color>
+    <color name="gray">#666161</color>
+    <color name="black">#000000</color>
 
     <color name="white">#ffffff</color>
     <color name="feed_bg">#d3d6db</color>
