--- a/sample/src/main/res/layout/active_deals_details.xml
+++ b/sample/src/main/res/layout/active_deals_details.xml
@@ -80,6 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -97,8 +98,8 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/text_color"
+        android:layout_height="5dp"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="2dp"/>
 
     <android.support.design.widget.TabLayout
