--- a/sample/src/main/res/layout/active_deals_details.xml
+++ b/sample/src/main/res/layout/active_deals_details.xml
@@ -88,7 +88,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/img_avatar_card" />
+            android:src="@drawable/male" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
