--- a/sample/src/main/res/layout/activity_meeting.xml
+++ b/sample/src/main/res/layout/activity_meeting.xml
@@ -125,7 +125,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp">
+                android:layout_marginBottom="2dp"
+                android:layout_gravity="center">
 
                 <ImageView
                     android:id="@+id/decrease_duration"
