--- a/sample/src/main/res/layout/layout_browse_adapter.xml
+++ b/sample/src/main/res/layout/layout_browse_adapter.xml
@@ -21,17 +21,17 @@
             android:layout_margin="5dp"
             android:gravity="center">
 
-            <!--<ImageView-->
-                <!--android:layout_width="100dp"-->
-                <!--android:layout_height="100dp"-->
-                <!--android:id="@+id/contacts_image_browse"-->
-                <!--android:src="@drawable/ic_launcher_background"/>-->
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/contacts_image_browse"
+            <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:scaleType="fitCenter" >
-            </com.android.volley.toolbox.NetworkImageView>
+                android:id="@+id/contacts_image_browse"
+                android:src="@drawable/male"/>
+            <!--<com.android.volley.toolbox.NetworkImageView-->
+                <!--android:id="@+id/contacts_image_browse"-->
+                <!--android:layout_width="100dp"-->
+                <!--android:layout_height="100dp"-->
+                <!--android:scaleType="fitCenter" >-->
+            <!--</com.android.volley.toolbox.NetworkImageView>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
