--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -16,12 +16,12 @@
 <resources>
     <color name="list_item_background">#AACCCCCC</color>
     <color name="app_color">#8EAE3C</color>
-    <color name="colorPrimary">#39495e</color>
-    <color name="colorPrimaryDark">#2c3e54</color>
+    <color name="colorPrimary">#213858</color>
+    <color name="colorPrimaryDark">#162c48</color>
     <color name="colorAccent">#2d556c</color>
 
     <color name="project_color">#ffffff</color>
-    <color name="text_color">#39495e</color>
+    <color name="text_color">#436086</color>
     <color name="gray">#d9d9d9</color>
     <color name="pink">#f97bf5</color>
 
