--- a/laser-native-editor/src/main/res/layout/editor_toolbar_linearlayout_horizontal.xml
+++ b/laser-native-editor/src/main/res/layout/editor_toolbar_linearlayout_horizontal.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
@@ -122,6 +122,14 @@
         android:maxWidth="20dp"
         android:src="@drawable/icon_link" />
 
+    <ImageButton
+        android:id="@+id/action_map"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@android:color/transparent"
+        android:maxHeight="20dp"
+        android:maxWidth="20dp"
+        android:src="@drawable/icon_marker" />
 
     <ImageButton
         android:id="@+id/action_erase"
